made campus section responsive

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     jzQygi+GvYdkpGJyoXLm+eXj5uBXYX1fqF1NoU5olGpR
     ao1Qik48eTwtcy0AI15tgqAAC2AAD1qm1aR6oHwmf
     css2?family=Poppins:w
-    ght@200;300;400;500;600&display=swap" 
+    ght@200;300;400;500;600&display=swap"  
     rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" 
-    rel="stylesheet">
-  
+    rel="stylesheet"> 
+    
 </head>
 <body>
     <header class="header" id="home">
@@ -39,7 +39,7 @@
             </div>
             <img src="menu-btn.svg" class="menu-btn" id="menu-btn" onclick="showMenu()">
         </nav>
-        <div class="text-box" id="about">
+        <div class="text-box">
             <h1 class="h1-textbox">😎World's Biggest University🤩</h1>
             <p class="p-textbox">Lorem ipsum dolor sit amet consectetur adipisicing elit. At eveniet <br> deserunt quod sed tempora ea eius repellendus quis hic quidem deleniti laudantium odio rem, eum voluptatem minima <br> dolor aperiam facilis?
             Facilis velit consequatur maiores cumque itaque dolore atque quae quas non corporis, <br> pariatur a, ipsam expedita? Aliquam voluptatum eum vel, exercitationem iusto cumque natus corporis est quisquam nobis mollitia optio!</p>
@@ -69,7 +69,7 @@
     </section>
 
     <!----- Campus ----->
-    <section class="campus" id="blog"> 
+    <section class="campus"> 
         <h1>Our Global Campus</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
@@ -168,12 +168,12 @@
     <!----------- Call To Action ----------->
     <section class="cta" id="contact">
         <h1>Enroll For Our Various Online Courses Anewhere From The World</h1>
-        <a href="#000" class="visit-btn">CONTACT US</a>
+        <a href="#" class="visit-btn">CONTACT US</a>
     </section>
 
     <!------------ FOOTER ------------>
 
-    <section class="footer">
+    <footer class="footer">
         <h4>About Us</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Assumenda aut temporibus, similique possimus officiis minus soluta nam 
@@ -181,7 +181,7 @@
             ratione natus itaque nulla quisquam quaerat asperiores in velit?
         </p><br>
         <p>Was made by Keskil Nazarov</p>
-    </section>
+    </footer>
 
     <!----- JavaScript for toggle menu --->
     <script>
